# WhatsNext

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  SECURITY.md  VISION.md  alembic.ini  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  format.yml  lint.yml  publish.yml  test.yml  ty-check.yml
deploy/: README.md  nginx.conf  whatsnext.service
docs/: index.md
docs/getting-started/: cli.md  configuration.md  deployment.md  formatters.md  install-client.md  install-server.md  quickstart.md
docs/reference/: index.md
docs/reference/client/: cli.md  client.md  formatters.md  job.md  project.md  server.md
docs/reference/server/: api.md  config.md  database.md  main.md  models.md  routers.md  schemas.md
docs/stylesheets/: extra.css
requirements/: requirements-dev.txt  requirements-server.txt
scripts/: bump_version.py
test/: test.py
tests/: conftest.py  insert_dummy.sql  main.py  test.py  train.py
tests/test_cli/: test_app.py  test_config.py  test_init.py
tests/test_client/: test_client.py  test_formatter.py  test_models.py  test_project.py  test_server.py
tests/test_server/: test_api.py  test_database.py  test_db.py  test_dependencies.py  test_middleware.py  test_routers.py  test_validate_in_db.py
whatsnext/: __init__.py  models.py  test_formatting.py
whatsnext/api/client/: artifact.py  client.py  formatter.py  job.py  learn_requests.py  project.py  resource.py  server.py  task.py  utils.py
whatsnext/api/server/: config.py  database.py  dependencies.py  main.py  middleware.py  models.py  schemas.py  validate_in_db.py
whatsnext/api/server/migrations/: README.md  script.py.mako
whatsnext/api/server/routers/: clients.py  (+3 more)
whatsnext/api/shared/: __init__.py  status.py
whatsnext/cli/: __init__.py
whatsnext/cli/commands/: __init__.py
